Add --add-reads test case